Adjust folder structure

--- a/app/templates/_header.jade
+++ b/app/templates/_header.jade
@@ -19,16 +19,10 @@ header.header.header--fixed
           path(d='M35.3684 29.8421C35.3684 29.4351 35.6983 29.1052 36.1053 29.1052H41.2632C41.6701 29.1052 42 29.4351 42 29.8421V37.2105C42 37.6175 41.6701 37.9473 41.2632 37.9473H36.1053C35.6983 37.9473 35.3684 37.6175 35.3684 37.2105V29.8421Z' fill='#EEEEEE')
 
     nav.header__menu
-      if current.source == 'index'
-        button.header__link.js-scroll-to-talks More
-        button.header__link.js-scroll-to-about About
-        button.header__link.js-scroll-to-work Work
-        button.header__link.js-scroll-to-hero Home
-      if current.source != 'index'
-        a.header__link(href="/#talks" aria-label="Link to More") More
-        a.header__link(href="/#about" aria-label="Link to About") About
-        a.header__link(href="/#work" aria-label="Link to Work") Work
-        a.header__link(href="/" aria-label="Link to Home" class="#{ current.source == 'index' ? 'is-active' : '' }") Home
+      a.header__link(href="https://www.linkedin.com/in/matheusagcosta/" target="_blank" aria-label="Link to LinkedIn") LinkedIn
+      a.header__link(href="https://codepen.io/matheusagcosta/" target="_blank" aria-label="Link to Codepen") Codepen
+      a.header__link(href="https://github.com/matheusagcosta/" target="_blank" aria-label="Link to Github") Github
+      //- a.header__link(href="/" aria-label="Link to Home" class="#{ current.source == 'index' ? 'is-active' : '' }") Home
 
     //- .header__actions
     //-   nav.header__switcher
