--- a/app/css/index.scss
+++ b/app/css/index.scss
@@ -3,9 +3,5 @@
 @import 'base';
 @import 'logo';
 @import 'header';
-@import 'hero';
-@import 'work';
-@import 'talks';
-@import 'about';
-@import 'footer';
+@import 'resume';
 @import 'states';
