--- a/app/templates/_header.jade
+++ b/app/templates/_header.jade
@@ -20,8 +20,8 @@ header.header.header--fixed
 
     nav.header__menu
       a.header__link(href="https://www.linkedin.com/in/matheusagcosta/" target="_blank" aria-label="Link to LinkedIn") LinkedIn
-      a.header__link(href="https://codepen.io/matheusagcosta/" target="_blank" aria-label="Link to Codepen") Codepen
-      a.header__link(href="https://github.com/matheusagcosta/" target="_blank" aria-label="Link to Github") Github
+      a.header__link(href="https://codepen.io/matheusagcosta/" target="_blank" aria-label="Link to Codepen") CodePen
+      a.header__link(href="https://github.com/matheusagcosta/" target="_blank" aria-label="Link to Github") GitHub
       //- a.header__link(href="/" aria-label="Link to Home" class="#{ current.source == 'index' ? 'is-active' : '' }") Home
 
     //- .header__actions
