--- a/app/css/_header.scss
+++ b/app/css/_header.scss
@@ -20,7 +20,6 @@
     align-items: center;
     display: flex;
     height: 100%;
-    justify-content: space-between;
     margin: auto;
     max-width: $max-width;
     padding: 1rem 1.5rem;
@@ -32,7 +31,11 @@
     overflow: hidden;
 
     @media screen and (min-width: 801px) {
-      width: 73px;
+      width: 48px;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 40px;
     }
   }
 
@@ -61,10 +64,6 @@
   &__menu,
   &__switcher {
     width: auto;
-  }
-
-  &__menu {
-
   }
 
   &__actions {
