Update Work experience

--- a/app/index.jade
+++ b/app/index.jade
@@ -15,7 +15,7 @@ main.resume
       .resume__block
         h4.resume__title Biography
         p
-          | I’m a Brazilian multidisciplinary designer bridging the gap between Product Design and Software Development who’s worked in-house and remotely on many projects, creating digital experiences for over a decade across various industries.
+          | I’m a Brazilian systems thinker bridging the gap between design and software who’s worked in-house and remotely on many projects, creating digital experiences for over a decade across various industries.
 
       .resume__block
         h4.resume__title Education
@@ -29,9 +29,6 @@ main.resume
         p
           a(href="mailto:hey@mcosta.me" aria-label="Send me an Email")
             | hey@mcosta.me
-        //- p
-        //-   a(href="https://matheusagcosta.com", target="_blank", rel="noopener noreferrer")
-        //-     | https://matheusagcosta.com
 
         p
           a(href="https://www.linkedin.com/in/matheusagcosta", target="_blank", rel="noopener noreferrer")
@@ -52,14 +49,14 @@ main.resume
       .resume__block
         h4.resume__title Capabilities
         p
-          strong Design: #{''}
-          | Definition, research, user stories, use cases, flowcharting, wireframing, prototyping, visual specification, asset creation, QA, evaluation, interactive design frameworks, interface patterns, and dynamic content.
-        p
           strong Code: #{''}
-          | HTML, Pug, Jade, CSS, Sass, Stylus, JavaScript, JSON, jQuery, React, Vue.js, Git.
+          | HTML, Pug, Jade, CSS, CSS-in-JS, Sass, Stylus, JavaScript, JSON, jQuery, React, Vue.js, Git.
         p
           strong Tools: #{''}
-          | Figma, Invision, Photoshop, Balsamiq, Zeplin, VS Code, Storybook, Webflow, Wordpress.
+          | VS Code, Storybook, Webflow, Wordpress, Figma, Invision, Photoshop, Balsamiq, Zeplin.
+        p
+          strong Design: #{''}
+          | Definition, research, user stories, use cases, flowcharting, wireframing, prototyping, visual specification, asset creation, QA, evaluation, interactive design frameworks, interface patterns, and dynamic content.
 
     .resume__column
       .resume__block
@@ -73,27 +70,31 @@ main.resume
               a(href="https://meetsoci.com", target="_blank", rel="noopener noreferrer")
                 i SOCi
             p
-              | My mission was to evolve the DS maturity, enhance the handover process to engineers, and increase the adoption from designers, coming from a basic Figma file to a central hub in ZeroHeight where different teams could consume.
+              | • Evolved the DS maturity, enhancing the handover process to engineers and increasing the adoption from designers, coming from a basic Figma file to a central hub in ZeroHeight where different teams could consume.
+              br
+              | • Automated design tokens from Figma JSON to GitHub using actions to get all the CSS.
+              br
+              | • Isolated UI libraries to avoid unwanted updates.
           li
             p
-              strong Product Designer / Engineer #{''}
+              strong Front-end Engineer #{''}
               | (Sep 21 - Oct 22)
             p
               a(href="https://hubstaff.com", target="_blank", rel="noopener noreferrer")
                 i Hubstaff
             p
-              | I first joined the marketing team to improve their experience when building new pages.
+              | • Helped the marketing team improve the core web vitals score and how the non-coders publish pages.
               br
-              | Then I transitioned to be the P.O. of the billing and designOps teams, leading payment-related features and the company’s design system.
-          li
-            p
-              strong Technical Screener / Interviewer #{''}
-              | (Jul 21 - Present)
-            p
-              a(href="https://www.nextonlabs.com/", target="_blank", rel="noopener noreferrer")
-                i Nexton
-            p
-              | Conduct interviews following assigned interview guidelines and best practices, representing the brand to potential design candidates, and then providing all data, including video recording, meeting notes in the predefined format, and evaluation results, to a Director of the Recruiting Team.
+              | • Migrated the legacy Rails application to a Vue.js + Gridsome SSG combined with the git-based CMS Forestry.
+          //- li
+          //-   p
+          //-     strong Technical Screener / Interviewer #{''}
+          //-     | (Jul 21 - Present)
+          //-   p
+          //-     a(href="https://www.nextonlabs.com/", target="_blank", rel="noopener noreferrer")
+          //-       i Nexton
+          //-   p
+          //-     | • Conduct interviews following assigned interview guidelines and best practices, representing the brand to potential design candidates, and then providing all data, including video recording, meeting notes in the predefined format, and evaluation results, to a Director of the Recruiting Team.
           li
             p
               strong Lead UX / UI Engineer #{''}
@@ -102,9 +103,9 @@ main.resume
               a(href="https://devready.io", target="_blank", rel="noopener noreferrer")
                 i DevReady
             p
-              | Led the end-to-end design process for the new Rockford Fosgate dashboard.
+              | • Led the end-to-end process for the new Rockford Fosgate dashboard using Angular JS and SCSS.
               br
-              | Activities included the implementation of Lean UX processes, UI design and front-end development.
+              | • Activities included the implementation of Lean UX processes, UI components and front-end development.
           li
             p
               strong Lead UX / UI Engineer #{''}
@@ -112,38 +113,45 @@ main.resume
             p
               a(href="https://app.eventene.com", target="_blank", rel="noopener noreferrer")
                 i Eventene
-            p Crafted all the products, built a design system, revamped the dashboard for event organizers, and redesigned the mobile apps for participants.
+            p
+              | • Crafted a design system using Jekyll, Sass, and Github Pages.
+              br
+              | • Revamped the dashboard for event organizers, using Ruby on Rails, Sass, JQuery and Slim.
+              br
+              | • Developed a hybrid app with React, Styled Components and Storybook.
+              br
+              | • Built a React Native mobile app for iOS and Android.
           li
             p
-              strong Lead Web Designer #{''}
+              strong Lead UX / UI Engineer #{''}
               | (Aug 16 - Nov 17)
             p
               a(href="https://www.e-xact.com/", target="_blank", rel="noopener noreferrer")
                 i E-xact Transactions
-            p Led the design from the conception to delivery of several features of their legacy fintech platform in a modern single-page application for Chase.
+            p
+              | • Led the design from the conception to delivery of several features of their legacy fintech platform in a modern single-page application for Chase.
+              br
+              | • The stack included Vue.js, Sass and Pug.
           li
             p
-              strong UX Designer / UI Engineer #{''}
+              strong UX / UI Engineer #{''}
               | (Aug 14 - Aug 16)
             p
               a(href="https://impulso.team/", target="_blank", rel="noopener noreferrer")
                 i Helabs
-            p Worked from conception to delivery of projects for multiple clients like H&R Block, Citrix, and General Electric.
-
-          //- li
-          //-   p
-          //-     strong UX Designer / UI Engineer #{''}
-          //-     | (Jan 13 - Aug 14)
-          //-   p
-          //-     a(href="https://fireworkweb.com.br/", target="_blank", rel="noopener noreferrer")
-          //-       i Firework Web & Mobile
-          //-   p Worked from conception to delivery of projects for their main client, Scalable Path.
+            p
+              | • Worked from conception to delivery of projects for multiple clients like H&R Block, Citrix, and General Electric.
+              br
+              | • The stack included Ruby on Rails, Slim, React, Storybook and Sass.
           li
             p
-              strong UX Designer / UI Engineer #{''}
+              strong UX / UI Engineer #{''}
               | (Nov 11 - Jul 14)
             p
               a(href="https://arcasolutions.com/", target="_blank", rel="noopener noreferrer")
                 i Arca Solutions
-            p Worked with a range of startups to kick-start their concepts, define a design language and implement the front-end components for their projects based on the eDirectory product.
+            p
+              | • Worked with various startups to kick-start their concepts, define a design language and implement the front-end components for their projects based on the eDirectory product.
+              br
+              | • The stack included PHP, jQuery and Bootstrap.
 
